--- a/root/etc/ansible/templates/parameters.yml.j2
+++ b/root/etc/ansible/templates/parameters.yml.j2
@@ -1,20 +1,12 @@
 parameters:
-    database_driver: %env.database_driver%
-    database_host: %env.database_host%
-    database_port: %env.database_port%
-    database_name: %env.database_name%
-    database_user: %env.database_user%
-    database_password: %env.database_password%
+    database_driver: {{ database_driver }}
+    database_host: {{ database_host }}
+    database_port: {{ database_port }}
+    database_name: {{ database_name }}
+    database_user: {{ database_user }}
+    database_password: {{ database_password }}
     database_path: "%kernel.root_dir%/../data/db/wallabag.sqlite"
     database_table_prefix: wallabag_
-
-    test_database_driver: pdo_sqlite
-    test_database_host: 127.0.0.1
-    test_database_port: ~
-    test_database_name: ~
-    test_database_user: ~
-    test_database_password: ~
-    test_database_path: "%kernel.root_dir%/../data/db/wallabag_test.sqlite"
 
     mailer_transport:  smtp
     mailer_host:       127.0.0.1
@@ -45,5 +37,5 @@ parameters:
     rabbitmq_password: guest
 
     # Redis processing
-    redis_host: localhost
+    redis_host: redis
     redis_port: 6379
