--- a/root/etc/ansible/templates/parameters.yml.j2
+++ b/root/etc/ansible/templates/parameters.yml.j2
@@ -7,6 +7,7 @@ parameters:
     database_password: {{ database_password }}
     database_path: "%kernel.root_dir%/../data/db/wallabag.sqlite"
     database_table_prefix: wallabag_
+    database_socket: null
 
     mailer_transport:  smtp
     mailer_host:       127.0.0.1
@@ -16,7 +17,7 @@ parameters:
     locale:            en
 
     # A secret key that's used to generate certain security-related tokens
-    secret: ovmpmAWXRCabNlMgzlzFXDYmCFfzGv
+    secret: {{ secret }}
 
     # two factor stuff
     twofactor_auth: true
@@ -37,5 +38,7 @@ parameters:
     rabbitmq_password: guest
 
     # Redis processing
+    redis_scheme: tcp
     redis_host: redis
     redis_port: 6379
+    redis_path: null
