--- a/root/etc/ansible/templates/parameters.yml.j2
+++ b/root/etc/ansible/templates/parameters.yml.j2
@@ -24,7 +24,7 @@ parameters:
     twofactor_sender: no-reply@wallabag.org
 
     # fosuser stuff
-    fosuser_registration: true
+    fosuser_registration: {{ registration }}
     fosuser_confirmation: true
 
     from_email: {{ from_email }}
