--- a/root/etc/ansible/templates/parameters.yml.j2
+++ b/root/etc/ansible/templates/parameters.yml.j2
@@ -8,6 +8,7 @@ parameters:
     database_path: "%kernel.root_dir%/../data/db/wallabag.sqlite"
     database_table_prefix: wallabag_
     database_socket: null
+    database_charset: utf8
 
     mailer_transport:  smtp
     mailer_host:       {{ mailer_host }}
@@ -36,9 +37,14 @@ parameters:
     rabbitmq_port: 5672
     rabbitmq_user: guest
     rabbitmq_password: guest
+    rabbitmq_prefetch_count: 10
 
     # Redis processing
     redis_scheme: tcp
     redis_host: redis
     redis_port: 6379
     redis_path: null
+    redis_password: null
+
+    # sites credentials
+    sites_credentials: {}
