makes email confirmation for user registration configurable

--- a/root/etc/ansible/templates/parameters.yml.j2
+++ b/root/etc/ansible/templates/parameters.yml.j2
@@ -28,7 +28,7 @@ parameters:
 
     # fosuser stuff
     fosuser_registration: {{ registration }}
-    fosuser_confirmation: true
+    fosuser_confirmation: {{ registration_mail_confirmation }}
 
     from_email: {{ from_email }}
 
