Updated image to wallabag 2.3.0

--- a/root/etc/ansible/templates/parameters.yml.j2
+++ b/root/etc/ansible/templates/parameters.yml.j2
@@ -13,6 +13,8 @@ parameters:
 
     domain_name: {{ domain_name }}
 
+    domain_name: {{ domain_name }}
+
     mailer_transport:  smtp
     mailer_host:       {{ mailer_host }}
     mailer_user:       {{ mailer_user }}
