--- a/root/etc/ansible/templates/parameters.yml.j2
+++ b/root/etc/ansible/templates/parameters.yml.j2
@@ -9,6 +9,7 @@ parameters:
     database_table_prefix: wallabag_
     database_socket: null
     database_charset: {{ database_charset }}
+    database_driver_class: null
 
     domain_name: {{ domain_name }}
 
