add secure email

--- a/root/etc/ansible/templates/parameters.yml.j2
+++ b/root/etc/ansible/templates/parameters.yml.j2
@@ -17,6 +17,9 @@ parameters:
     mailer_host:       {{ mailer_host }}
     mailer_user:       {{ mailer_user }}
     mailer_password:   {{ mailer_password }}
+    mailer_port:       {{ mailer_port }}
+    mailer_encryption: {{ mailer_encryption }}
+    mailer_auth_mode:  {{ mailer_auth_mode }} 
 
     locale:            {{ locale }}
 
