--- a/root/etc/ansible/templates/parameters.yml.j2
+++ b/root/etc/ansible/templates/parameters.yml.j2
@@ -1,5 +1,6 @@
 parameters:
     database_driver: {{ database_driver }}
+    database_driver_class: {{ database_driver_class }}
     database_host: {{ database_host }}
     database_port: {{ database_port }}
     database_name: {{ database_name }}
@@ -9,7 +10,6 @@ parameters:
     database_table_prefix: wallabag_
     database_socket: null
     database_charset: {{ database_charset }}
-    database_driver_class: null
 
     domain_name: {{ domain_name }}
 
