Config: add sentry_dsn entry

--- a/root/etc/ansible/templates/parameters.yml.j2
+++ b/root/etc/ansible/templates/parameters.yml.j2
@@ -51,3 +51,6 @@ parameters:
     redis_port: {{ redis_port }}
     redis_path: {{ redis_path }}
     redis_password: {{ redis_password }}
+
+    # Sentry
+    sentry: {{ sentry_dsn }}
