Sentry: fix template parameters

--- a/root/etc/ansible/templates/parameters.yml.j2
+++ b/root/etc/ansible/templates/parameters.yml.j2
@@ -53,4 +53,4 @@ parameters:
     redis_password: {{ redis_password }}
 
     # Sentry
-    sentry: {{ sentry_dsn }}
+    sentry_dsn: {{ sentry_dsn }}
