Add new parameter server_name for 2FA issuer
Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/root/etc/ansible/templates/parameters.yml.j2
+++ b/root/etc/ansible/templates/parameters.yml.j2
@@ -58,3 +58,6 @@ parameters:
 
     # sentry logging
     sentry_dsn: {{ sentry_dsn }}
+
+    # User-friendly name of your instance for 2FA issuer
+    server_name: {{ server_name }}
